fix form fon-size on small resolution

--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -4,7 +4,7 @@
   cursor: pointer;
   border: none;
   outline: none;
-  box-sizing: border-box;
+  box-sizing: border-box;  
   transition: opacity 0.25s;
   text-decoration: none;
   &--callback {
@@ -45,6 +45,28 @@
     }
   }//uppercase
 
+  &--big {
+    font-size: 24px;
+    line-height: 1.1;
+    padding: 10px 15px 11px;    
+    width: auto;
+    color: #fff;
+    background: @green;    
+    border-radius: 25px;
+  }//big
+  &--donload {
+    position: relative;
+    padding-left: 40px;
+    font-size: 20px;
+    &:before {
+      font-family: "Fontello";
+      position: absolute;
+      content: "\e800";
+      left: 15px;
+      top: 9px;
+    }
+  }//download
+
 }
 
 //   display: inline-block;
@@ -72,21 +94,5 @@
 //     border-radius: 15px
 //   }
 
-//   &--big {    
-//     font-size: 24px;
-//     line-height: 1.1;    
-//   }
 
-//   &--donload {
-//     position: relative;
-//     padding-left: 40px;
-//     font-size: 20px;
-//     &:before {
-//       font-family: "Fontello";
-//       position: absolute;
-//       content: "\e800";
-//       left: 15px;
-//       top: 9px;
-//     }
-//   }
 // }
