--- a/src/less/blocks/other.less
+++ b/src/less/blocks/other.less
@@ -30,7 +30,7 @@
     font-family: @Kurale;
     width: 30.68%;
     font-size: 28px;
-    text-align: center;
+    text-align: center;    
     p {
       padding: 0 5%;
       margin: 10px 0;
@@ -38,6 +38,7 @@
     @media @small {
       .center;
       display: block;
+      width: 100%;
       margin-bottom: 40px;
       &:last-child {
         margin-bottom: 0;
