--- a/src/less/blocks/price.less
+++ b/src/less/blocks/price.less
@@ -140,6 +140,7 @@
   &__phone {
     color: inherit;
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: none;  
+    white-space: nowrap;   
   }
 }
