--- a/src/less/blocks/secrets.less
+++ b/src/less/blocks/secrets.less
@@ -41,7 +41,7 @@
       width: 80%;
     }
     @media @small {
-      width: 90%;
+      width: 100%;
     }
   }
   &__text {
@@ -54,5 +54,8 @@
     background: #fff;
     padding: 44px 35px;
     border-radius: 15px;
+    @media @small {
+      padding: 20px 15px;
+    }
   }
 }
